Add Consul and Redis services; update API gateway config
Updated `docker-compose.yml` to define Consul and Redis services with appropriate ports, volume, and network settings.

Modified `NestAPIGateway.csproj` to include Ocelot and Ocelot.Provider.Consul package references.
-Added a `<ProjectExtensions>` section.

Created `Ocelot.json` to define API routing for various HTTP methods.

--- a/Deployments/Consul/docker-compose.yml
+++ b/Deployments/Consul/docker-compose.yml
@@ -1,2 +1,10 @@
-# CONSUL
+# This file is used to define the Consul service in the docker-compose file.
 
+version: '3.8'
+
+services:
+  consul:
+    image: consul:latest
+    container_name: consul
+    ports:
+      - "8500:8500"  # Consul UI port
