--- a/NestAPIGateway/src/NestAPIGateway/NestAPIGateway.csproj
+++ b/NestAPIGateway/src/NestAPIGateway/NestAPIGateway.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ocelot" Version="23.4.3" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="23.4.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
