--- a/NestAPIGateway/src/NestAPIGateway/Properties/launchSettings.json
+++ b/NestAPIGateway/src/NestAPIGateway/Properties/launchSettings.json
@@ -22,9 +22,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7046;http://localhost:5245",
+      "applicationUrl": "https://localhost:5000;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
