--- a/NestAuthService/src/NestAuth.API/Properties/launchSettings.json
+++ b/NestAuthService/src/NestAuth.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5181",
       "environmentVariables": {
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7210;http://localhost:5181",
+      "applicationUrl": "https://localhost:7210;http://localhost:5181;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
