Add network configuration and update consul service
Modified `docker-compose.yml` to include a new network
`consul-net` with a bridge driver.
-Updated the `consul`
service to connect to this network and added port mappings
for `8600` (TCP and UDP).
-Updated the `client` argument
to use quotes for consistency.

--- a/Deployments/Consul/docker-compose.yml
+++ b/Deployments/Consul/docker-compose.yml
@@ -1,23 +1,30 @@
 ﻿# This file is used to define the Consul service in the docker-compose file.
-
 version: '3.8'
+
+networks:
+  consul-net:
+    driver: bridge
 
 services:
   consul:
     image: hashicorp/consul:latest
     container_name: consul-server
     restart: unless-stopped
+    networks:
+      - consul-net
     volumes:
       - consul-data:/consul/data
     ports:
-      - "8500:8500"  # HTTP API və Web UI
+      - "8500:8500"
+      - "8600:8600/tcp"
+      - "8600:8600/udp"
     environment:
       - CONSUL_BIND_INTERFACE=eth0
     command: >
       agent -server
       -bootstrap-expect=1
       -ui
-      -client=0.0.0.0
+      -client="0.0.0.0"
       -data-dir=/consul/data
 
 volumes:
