Enhance Consul integration and improve health checks
- Updated `docker-compose.yml` to specify node and advertise address for Consul.
- Modified `AuthController.cs` to include routing and API controller attributes.
- Improved `HealthController.cs` to return detailed health status with timestamp.
- Added `Ocelot.Provider.Consul` package reference in `NestAuth.API.csproj`.
- Refactored `Program.cs` to use async methods for running and registering with Consul.
- Updated `ServicesRegistrator.cs` to add identity, Consul, and MassTransit services.
- Refactored Consul registration to use async methods and clarified health check URL construction.
- Made minor adjustments to service registration tags and health check interval.
- Enhanced error handling in the Consul registration process for clearer messages.

--- a/Deployments/Consul/docker-compose.yml
+++ b/Deployments/Consul/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       -ui
       -client="0.0.0.0"
       -data-dir=/consul/data
+      -node="192.168.1.68"               
+      -advertise=192.168.1.68
 
 volumes:
   consul-data:
