--- a/NestAuthService/src/NestAuth.API/NestAuth.API.csproj
+++ b/NestAuthService/src/NestAuth.API/NestAuth.API.csproj
@@ -23,6 +23,7 @@
 		</PackageReference>
 		<PackageReference Include="Ocelot.Provider.Consul" Version="23.4.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+		<PackageReference Include="UAParser" Version="3.1.47" />
 	</ItemGroup>
 
 	<ItemGroup>
