--- a/NestNotificationService/src/NestNotification.API/Properties/launchSettings.json
+++ b/NestNotificationService/src/NestNotification.API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7152;http://localhost:5041",
+      "applicationUrl": "https://localhost:7152",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
