--- a/Services/NestAuthService/src/NestAuth.API/Properties/launchSettings.json
+++ b/Services/NestAuthService/src/NestAuth.API/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5181",
+      "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -16,7 +16,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7210;http://localhost:5181;",
+      "applicationUrl": "https://localhost:7210;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
