--- a/Services/NestNotificationService/src/NestNotification.API/appsettings.json
+++ b/Services/NestNotificationService/src/NestNotification.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings":{
+    "RepetitionIntervalSeconds" : 20,
+    "RetryCount":5,
+    "SMTPTimeout" : 60000,
+    "EnableSsl":true
+    
+  }
 }
