--- a/Deployments/DockerFiles/RabbitMQ/docker-compose.yml
+++ b/Deployments/DockerFiles/RabbitMQ/docker-compose.yml
@@ -1,14 +1,20 @@
 # This file is used to define the RabbitMQ service in the docker-compose file.
 
-version: '3.8'
 
 services:
   rabbitmq:
-    image: rabbitmq:4-management
+    image: rabbitmq:4.0-management
     container_name: rabbitmq
+    restart: always
     ports:
-      - "5672:5672"   # AMQP port
-      - "15672:15672" # Management plugin UI port
+      - "5672:5672"
+      - "15672:15672"
     environment:
-      RABBITMQ_DEFAULT_USER: guest # Default username
-      RABBITMQ_DEFAULT_PASS: guest # Default password
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      - rabbitmq_network
+
+networks:
+  rabbitmq_network:
+    driver: bridge
