--- a/Services/NestNotificationService/src/NestNotification.API/appsettings.json
+++ b/Services/NestNotificationService/src/NestNotification.API/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MailSettings":{
-    "RepetitionIntervalSeconds" : 20,
-    "RetryCount":5,
-    "SMTPTimeout" : 60000,
-    "EnableSsl":true
-    
-  }
+  "AllowedHosts": "*"
 }
