--- a/DockerFiles/RabbitMQ/docker-compose.yml
+++ b/DockerFiles/RabbitMQ/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: rabbitmq:4.0-management
     container_name: rabbitmq
     restart: always
+    volumes:
+      - rabbitMq-data:/rabbitMq/data
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -18,3 +20,7 @@ services:
 networks:
   rabbitmq_network:
     driver: bridge
+
+
+volumes:
+  rabbitMq-data:
