--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,14 +5,14 @@ name: .NET CI
 
 on:
   push:
-    branches: [ "main", "develop", "feature/*" ]
+    branches: [ "master", "develop", "feature/*" ]
     paths-ignore:
       - '**/*.md'
       - 'docs/**'
       - 'DockerFiles/**'
   
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: [ "master", "develop" ]
     paths-ignore:
       - '**/*.md'
       - 'docs/**'
