--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -74,7 +74,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile
+        file: ./Dockerfiles/Dockerfile
         push: true
         tags: |
           ${{ secrets.DOCKER_REGISTRY }}/microshop:${{ env.BRANCH_NAME }}
