--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: .  
+        context: ./NestMicro  
         file: ./DockerFiles/Dockerfile
         push: true
         tags: |
