--- a/Services/NestAuthService/src/NestAuth.API/NestAuth.API.csproj
+++ b/Services/NestAuthService/src/NestAuth.API/NestAuth.API.csproj
@@ -22,9 +22,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
         <PackageReference Include="Ocelot.Provider.Consul" Version="23.4.3"/>
-        <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
+        <PackageReference Include="StackExchange.Redis" Version="2.8.31"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
         <PackageReference Include="UAParser" Version="3.1.47"/>
     </ItemGroup>
