--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -112,3 +112,26 @@ jobs:
 #          tags: |
 #            ${{ secrets.DOCKER_REGISTRY }}/microshop-notification:${{ env.BRANCH_NAME }}
 #            ${{ secrets.DOCKER_REGISTRY }}/microshop-notification:latest
+
+  docker-build-storage-service:
+    name: Build Storage Service
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')" >> $GITHUB_ENV
