--- a/Services/NestStorageService/src/NestStorage.API/NestStorage.API.csproj
+++ b/Services/NestStorageService/src/NestStorage.API/NestStorage.API.csproj
@@ -8,8 +8,38 @@
     </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="Consul" Version="1.7.14.6"/>
+        <PackageReference Include="FluentValidation" Version="11.11.0"/>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
+
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
+        <PackageReference Include="Ocelot.Provider.Consul" Version="23.4.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Abstractions\"/>
+        <Folder Include="Controllers\"/>
+        <Folder Include="DTOs\"/>
+        <Folder Include="IntegrationHandlers\"/>
+        <Folder Include="Mapping\"/>
+        <Folder Include="Repositories\"/>
+        <Folder Include="Services\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\EventBus\EventBus.Abstractions\EventBus.Abstractions.csproj"/>
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\EventBus\EventBus.RabbitMq\EventBus.RabbitMq.csproj"/>
+        <ProjectReference Include="..\..\..\..\Shared\Nest.Shared\Nest.Shared.csproj"/>
 	</ItemGroup>
 
 </Project>
