--- a/Services/NestStorageService/src/NestStorage.API/NestStorage.API.csproj
+++ b/Services/NestStorageService/src/NestStorage.API/NestStorage.API.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="FluentValidation" Version="11.11.0"/>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
@@ -22,18 +23,16 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
+        <PackageReference Include="nClam" Version="9.0.0"/>
         <PackageReference Include="Ocelot.Provider.Consul" Version="23.4.3"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Abstractions\"/>
+        <Folder Include="Consts\"/>
         <Folder Include="Controllers\"/>
         <Folder Include="DTOs\"/>
-        <Folder Include="IntegrationHandlers\"/>
         <Folder Include="Mapping\"/>
-        <Folder Include="Repositories\"/>
-        <Folder Include="Services\"/>
     </ItemGroup>
 
     <ItemGroup>
